# stream-deck-controller

./: .env.ejson  .envrc  .gitignore  Cargo.toml  Cross.toml  Dockerfile-arm-build  LICENSE  README.md  Taskfile.yaml  config.yaml  config_sample.yaml  flake.nix
.github/: dependabot.yml  renovate.json
.github/workflows/: delete_artifacts.yaml  release-rust.yml  rust-clippy.yml
client/: Cargo.toml
client/src/: change_event_var.rs  main.rs  stream_deck_device.rs
core/: Cargo.toml
core/lib/huehue/src/: light.rs  room.rs
core/src/: lib.rs
core/src/types/: api_types.rs  mod.rs
integrations/: Cargo.toml
integrations/lib/huehue/: Cargo.toml
integrations/lib/huehue/examples/: authorize.rs  devices.rs  light-switch.rs  lights.rs  scan.rs
integrations/lib/huehue/src/: bridge.rs  color.rs  device.rs  discover.rs  http.rs  hue.rs  lib.rs  light.rs  room.rs
integrations/lib/huehue/src/models/: config.rs  create_user.rs  device_type.rs  devices.rs  error.rs  generic.rs  lights.rs  mod.rs  rooms.rs
integrations/src/: airplay.rs  http.rs  hue.rs  integration.rs  lib.rs
integrations/src/homebridge/: homebridge.rs  mod.rs
integrations/src/integrations/: airplay.rs  homebridge.rs  http.rs  hue.rs  integration.rs  integration_enum.rs  mod.rs
integrations/src/integrations/utils/: light_utils.rs  mod.rs
lib/huehue/src/: http.rs  hue.rs
lib/huehue/src/models/: lights.rs
scripts/: Dockerfile.rpi  build-pi-armv6hf.sh
sdc_core/: Cargo.toml
sdc_core/src/types/: api_types.rs  mod.rs  ws_types.rs
server/: Cargo.toml
server/src/: main.rs  profiles.rs  rest_api.rs  ws_api.rs
src/: main.rs  rest_api.rs  ws_api.rs
src/integrations/: hue.rs  integration.rs  mod.rs
