[package]
name = "stream-deck-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
huehue = { path = "./lib/huehue" }

[dependencies]
huehue = "0.4.1"
anyhow = "1.0"
warp = "0.3"
tokio = { version = "1.19.2", features = ["full"] } 