[package]
name = "stream-deck-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
huehue = { path = "./lib/huehue" }

[dependencies]
huehue = "0.4.1"
anyhow = "1.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.19.2", features = ["full"] } 
tokio-stream = "0.1.9"
futures-util = "0.3.21"
async-trait = "0.1.56"