[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdc_core = {path = "../sdc_core"}
streamdeck = "0.7.0"
image = "0.24.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.26.0", features = ["full"] } 
tokio-stream = "0.1.12"
futures-util = "0.3.27"
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
base64 = "0.21.0"
rand = "0.8.5"
anyhow = "1.0"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
