[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
# replace huehue dependency with local copy, patch only support at package level so dont use
# patch.crates-io as normal.
huehue = { path = "./lib/huehue" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19.2", features = ["full"] } 
async-trait = "0.1.56"

