[package]
name = "integrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# replace huehue dependency with local copy, patch only support at package level so dont use
# patch.crates-io as normal.
huehue = { path = "./lib/huehue" }
async-trait = "0.1.68"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version =  "1.27.0", features=["process"] }
sdc_core = {path = "../sdc_core"}
shellexpand = "3.1.0"
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls" ] }
tracing = "0.1.38"
url = { version = "2.3.1", features = ["serde"] }
enum_dispatch = "0.3.11"
