[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdc_core = {path = "../sdc_core"}
integrations = {path = "../integrations"}
anyhow = "1.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.21.1", features = ["full"] } 
tokio-stream = "0.1.9"
futures-util = "0.3.21"
async-trait = "0.1.57"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
# match streamdeck version
image = "0.23.3"
base64 = "0.13.0"
bytes = "1.2.1"
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls" ] }
shellexpand = "2.1.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
enum_dispatch = "0.3.8"
