[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdc_core = {path = "../sdc_core"}
integrations = {path = "../integrations"}
anyhow = "1.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.27.0", features = ["full"] } 
tokio-stream = "0.1.12"
futures-util = "0.3.28"
async-trait = "0.1.68"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
# match streamdeck version
image = "0.24.6"
base64 = "0.21.0"
bytes = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls" ] }
shellexpand = "3.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
enum_dispatch = "0.3.11"
